# taberna

./: .gitignore  README.md  package-lock.json  package.json  rustfmt.toml
.github/workflows/: release.yml
src/: App.css  App.tsx  shop.ts  style.css  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  table.rs
src/components/: TableView.css  TableView.tsx  TableViewItem.css  TableViewItem.tsx
