[package]
name = "taberna"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
anyhow = "1.0"
indexmap = { version = "1.9", features = ["serde"] }
roead = { version = "0.18.2", default-features = false, features = ["yaml", "aamp"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["dialog-all", "window-close", "window-set-title"] }
tauri-plugin-persisted-scope = "0.1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
